<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddtaskActivity">

    <TextView
        android:id="@+id/tv_prompttask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/addtask_tv_prompttask"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/ed_entertask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_prompttask"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/tv_promptdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ed_entertask"
        android:text="@string/addtask_tv_promptdate"
        android:layout_marginTop="60dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_promptdate"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/layout_date"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_setyear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/addtask_ed_setyear"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="/"/>

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="/"
            android:textSize="40sp"/>
        <Spinner
            android:id="@+id/spinner_day"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_prompttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_date"
        android:layout_marginTop="30dp"
        android:text="@string/addtask_tv_prompttime"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/layout_timetv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_prompttime"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_hour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:text=":"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spinner_minute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="40sp"
            android:text=":"
            android:layout_weight="1"/>
        <Spinner
            android:id="@+id/spinner_second"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>



    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_timetv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/addtask_btn_add"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/tv_current_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_add"
        android:textSize="10sp"/>



</RelativeLayout>

