...
        android:layout_marginTop="10dp"
        />

  <!--  <include layout="@layout/content_main" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
...
